# kdb-x-codemie-integration

./: .gitignore  LICENSE  README.md  corrections.csv  pyproject.toml  query.py  run_tests.sh  start_client_session.sh  start_codemie_plugin.sh  start_mcp_server.sh  start_q_server.q  start_q_server.sh
codemie-plugins/: pyproject.toml  start_codemie_plugin.sh
scripts/: custom_functions.q  process.q
scripts/db/: sym
scripts/db/2025.12.03/quote/: .d  ask  bid  date  size  sym  time
scripts/db/2025.12.03/trade/: .d  price  size  sym  time
src/mcp_server/: __init__.py  __main__.py  main.py  server.py  settings.py
src/mcp_server/prompts/: __init__.py  _template.py  kdbx_table_analysis.py
src/mcp_server/resources/: __init__.py  _template.py  kdbx_database_tables.py  kdbx_sql_query_guidance.py  kdbx_sql_query_guidance.txt  kdx_corrections_list.py
src/mcp_server/tools/: __init__.py  _template.py  kdbx_correct_sql_query.py  kdbx_run_sql_query.py  kdbx_sim_search.py  kdbx_submit_corrections_query.py
src/mcp_server/utils/: embeddings.csv  embeddings.py  embeddings_helpers.py  format_utils.py  kdbx.py  logging.py
tests/: test_stuff.py
