[project]
name = "plugin-runner"
version = "0.1.0" 
description = "MCP server Codemie plugin for KDB-X"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codemie-plugins"
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.3.2,<8",
    "pytest-cov>=4.0.0,<5",
    "pytest-mock",
    "coverage>=7.8.0",
    "mypy",
    "trio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
